--- a/tex/main.tex
+++ b/tex/main.tex
@@ -25,13 +25,13 @@
 \maketitle
  
   {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-{\normalfont \itshape Abstract:} Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. Failing to predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is severely limited. In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints using only genomic sequence data. Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA)  sequences from nearly 100,000 unique \infl  strains from public  databases, our inferred models (\enet{s})  estimate the likelihood of specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. Applied  to the problem of forecasting the dominat strain(s) of the upcoming flu season, we show that \enet-based forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres. Furthermore we replicate the state of the art  assessment of the pandemic potential  of novel animal  strains. While the gold standard Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises several time-consuming experimental assays, our proposed \erisk score can be evaluated in seconds for each new strain. This  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
+    {\normalfont \itshape Abstract:} Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. Failing to closely predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction still remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs, has  historically   posed the even graver threat of a global  pandemic~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is severely limited. In this study, we introduce a computational approach to  parse out emergent evolutionary constraints using only genomic sequence data. A representation of these  inferred dependencies along with the associated computational framework is referred to as the \enet.   Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA) amino acid sequences from nearly 100,000 unique \infl  strains from public  databases, our proposed computational tools ` estimate the likelihood of a specific future  mutation, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. Applied  to the problem of forecasting the dominant strain(s) of the upcoming flu season, we show that \enet-based forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres ($\% $ improvement). Furthermore we replicate the state-of-the-art  assessment of the pandemic potential  of novel animal  strains. While the gold standard Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises several time-consuming experimental assays, our proposed \erisk score can be evaluated in seconds for each new strain, while strongly correlating with the published IRAT scores ($R^2=$). This  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
 }
 
 \vspace{10pt}
 \section*{Introduction}
 
-Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response comprises  yearly innoculation of the  population with a  reformulated  vaccine.  Designing the optimal flu shot requires predicting the dominant  strain(s)  in the upcoming season, and deviations between the predicted and the circulating strain(s)  reduce  vaccine effectiveness~\cite{tricco2013comparing} dramatically. Unfortunately,  despite  recent advances in forecasting tools~\cite{neher2014predicting,huddleston2020integrating}, prediction of the dominant strain(s) remains imperfect. 
+Influenza viruses constantly evolve~\cite{dos2016influenza},  producing  sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response comprises  yearly innoculation of the  population with a  reformulated  vaccine.  Designing the optimal flu shot requires predicting the dominant  strain(s)  in the upcoming season, and deviations between the predicted and the circulating strain(s)  reduce  vaccine effectiveness~\cite{tricco2013comparing} dramatically. Unfortunately,  despite  recent advances in forecasting tools~\cite{neher2014predicting,huddleston2020integrating}, prediction of the dominant strain(s) remains imperfect. 
 
 %###################################                                            
 %###################################                                            
@@ -60,34 +60,70 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small se
 %#############################################                                  
 %#############################################                                  
 
-While the seasonal flu epidemic is a serious health concern, novel \infl strains spilling over into humans from animal reservoirs pose the even graver threat of a global pandemic. With the memory of sudden emergence of   COVID-19 fresh in our minds, a looimng question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens,  thus harboring  a high potential  of triggering the next  pandemic.
+In addition to  the seasonal flu epidemic posing a serious health concern, novel \infl strains spilling over into humans from animal reservoirs can cause the even graver threat of a global pandemic, as demonstrated four times (1918 H1N1, 1957 H2N2, 1968 H3N2, 2009 H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of sudden emergence of   COVID-19 and the ensuing pandemic fresh in our minds, a looimng question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns},  thus harboring  a high potential  of triggering the next  pandemic.
 
 A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans, but   have the potential to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
 
-CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
+CDC's current solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
 
-In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  genomic sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza}, HA and NA respectively. Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such estimates are difficult to obtain without first inferring the emergent constraints at play specific to a strain,  or without considering the variation of mutational probabilities from one positional index to another along a genomic sequence. Thus, the well-known classical  DNA or genomic substitution models~\cite{posada1998modeltest} are not applicable in this context.  
+In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  amino acid sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza}, HA and NA respectively. Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such estimates are difficult to obtain without first inferring the emergent constraints at play specific to a strain,  or without considering the variation of mutational probabilities from one positional index to another along a protein sequence. Thus, the many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference, are not applicable in this context. 
 
-The sequence data from public databases that we train the \enet with represents sequences that were
-collected in the wild, and hence necessarily have  sufficiently high replicative fitness,  for these strains need  to be present in sufficiently high numbers in circulation to be  observed.  It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high  fitness. However, these fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity, changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
+The sequence data from public databases that we train the \enet with represents strains that were collected in the wild, and hence necessarily have  sufficiently high replicative fitness, on account of the fact that  these strains need  to be present in sufficiently high numbers in circulation to be  observed.  It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high  fitness. However, these fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion}, changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
 
-The ability of the \enet framework to determine the numerical odds of specific sequence variations allows us to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions albeit with some simplifying assumptions, with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
+The ability of the \enet framework to determine the numerical odds of specific sequence variations suggests that we might be able to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions (albeit with some simplifying assumptions), with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
 may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).
-And, a pandemic risk score of a novel strain may be estimated as scaling with the probability of giving rise to a well-adapted human strain. We demonstrate that our proposed solutions for these problems can indeed be validated in out-of-sample data.
+And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain. We demonstrate that our proposed solutions for these problems can indeed be validated in out-of-sample data.
 
-Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the nucleotide ``outcome'' at a specific positional index, using the sequence entries at other possibly remote parts of the coding sequence as features (Fig.~\ref{figscheme}b); thus yielding a recursive collection of decision trees. These decision trees are %inferred 
+Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the amino acid ``outcome'' at a specific positional index of the protein of interest, as a function of  the bases  at other possibly remote parts of the peptide sequence of the protein as features (Fig.~\ref{figscheme}b). Thus, the \enet comprises a recursive collection of decision trees. These decision trees are %inferred 
 % At the core of our algorithmic framework is a recursive forest of  cross-predicting conditional inference trees, which we refer to as the \enet,  
-inferred purely from the  coding  sequences of the proteins of interest with no additional phenotypic annotation other than identifying the host animal. However, probing the deep emergent interdependencies uncovers a rich structure of constraints that informs how strains can evolve while not  losing replicative fitness. Our modeling approach is a fundamental departure from the state of the art; we do not assume models of mutation, and we make no apriori assumptions that are specific to \infl viral sequences. [describe more here]
+inferred purely from the amino acid sequences of the proteins of interest with no additional phenotypic annotation, other than identifying the host animal. However, probing for deep emergent interdependencies we  uncover a rich structure of constraints ensuring that new  strains do not  lose replicative fitness. Thus, our modeling approach is a fundamental departure from the state of the art; we do not assume models of mutation a priori, and we make use of little information that is specific to \infl genomic sequences, or its life cycle, beyond focusing on HA and NA which are known to be the main targets of neutralizing antibodies~\cite{shao2017evolution}.
 
 
 % that allows us to  predict the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes. Evolutionary trajectories in the wild are shaped by complex hard-to-model selection pressures, and the \enet maximally incorporates the impact of these effects by  learning emergent patterns from public sequence databases.
 
-As our first result, we forecast dominant strain(s) for the seasonal flu, outperforming  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. This  validates our framework, and  outlines an approach to improve the effectiveness of the flu shot, outperforming  recent proposals using computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
+To validate our approach, we investigate two applications, namely if we can forecast dominant strains for the next flu season, and if we can correctly identify high risk strains amongst those collected in non-human hosts in the wild.
+Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. These results outline a new sophisticated pattern-recognition-enabled approach to improve the effectiveness of the flu shot, outperforming current practice (WHO/CDC) as well as  recently reported prediction strategies  using more standard computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
 We show that the \enet is able to leverage purely sequence information of specific strains, automatically in conjunction with the background distribution of high fitness strains, to  get a substantially  better predictive performance to what has been realized by the state of the art, with and without the use of more detailed phenotypic information~\cite{huddleston2020integrating,neher2014predicting}.
 
-\DQS{Maybe articulate that we can come close to analytical solution to these probelms, with equations stating what the optimal solution is.}
+\DQS{What phenotypic information is used by others}
 
 Our primary claim, however,  is the ability to estimate the pandemic potential of novel strains, via a new risk score which we call the  \erisk.  Our proposed risk score closely tracks  the IRAT estimate for  \infl  viruses, specifically ones that do not yet circulate in humans, in seconds as opposed to weeks taken by the detailed experimental assays. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies.
+
+{\color{Green1}
+
+
+It is well known that the influenza viral RNA-polymerase represents the lack of proofreading function. Thus, the integration of faulty nucleotides often occurs during the viral replication process with a rate of $10^{-3}$ to $10^{-4}$, which results in high mutation rates [39,40].
+
+
+
+  
+Due to its crucial role in receptor recognition and attachment, IAV HA is considered to be a principal determinant of the host-range. The specificity of the HA of avian influenza viruses is for $\alpha-2,3$ SA receptors found in the intestinal tract of the bird, whereas $\alpha-2,6$ SA receptors are predominantly found in the upper respiratory tract of humans. Recently, it has been shown that mutations in the HA protein alter its receptor-binding preference that allows the highly pathogenic avian H5N1 IAV to transmit between mammals [41]. Therefore, it is not surprising that multiple changes in gene segments of the avian influenza virus could result in its adaptation to humans [1]. On the other hand, owing to having both $\alpha-2,3$ and $\alpha-2,6$  linkages, pigs and several avian species (pheasants, turkeys, quails) may act as mixing vessels and can generate re-assortment viruses [42,43].
+
+
+Influenza proteins must evade immune recognition while maintaining their ability to function and interact with host cellular factors [44]. The three mechanisms by which influenza viruses undergo evolutionary change include mutation (antigenic drift), re-assortment (antigenic shift), and, in rare instances, recombination. The different virus lineages are predominantly host specific, but there are periodic exchanges of influenza virus gene segments between species, giving rise to pandemics of disease in humans, lower animals, and birds [45]. Influenza virus evolution proceeds via re-assortment and mutation, and such evolution can influence the host specificity and pathogenicity of these viruses [46]. Genetic variations of influenza A virus lead to possible changes in upcoming epidemiological behavior and may result in human pandemics.
+
+
+Significant mutations in antigenic sites resulting from constant point mutations in the influenza virus contribute to the gradual evolution of the virus, leading to antigen migration to produce new influenza virus subtypes to escape the immune pressure of the population [47]. All subtypes of influenza A virus antigenic drift can occur, but such antigenic drift often occurs in the general human influenza. Immune escape can be achieved by mutation in IAV proteins such as HA and/or NA. The minimal structural changes can occur in these surface proteins and so the immune protection of the host (acquired through previous infections or immunization) will no longer be effective against the invading virus. As a consequence, the immune system is unable to identify the newly changed virus variants and the recognition pattern of the antigen-antibody-interaction is not fully functional anymore. In addition, amino acid substitutions in HA protein can change the receptor preference of influenza virus. Some studies have shown that the G186V mutation in HA protein was noted as a potential adaptation of avian H7 to human-type receptors [48,49]. In A/Vietnam/1203/2004 (H5N1) virus, K58I substitution in HA protein is associated with increased viral replication of upper respiratory tracts in mice and ferrets [50]. Remarkably, the K58I substitution combined with a G219S mutation in HA protein increased the overall affinities of binding to  $\alpha-2,3$ and  $\alpha-2,6$ SA of the A/Anhui/1/13 (H7N9) virus [51]. Furthermore, there is a R292K mutation in NA protein in H7N9 virus strains which had been isolated from a patient after drug treatment. This substitution was found to promote drug resistance; in particular, it gave a high resistance to oseltamivir which is the most commonly used anti-influenza drug [52]. Antigenic drifts are the main reason for new variants and cause annual influenza outbreaks. Although these changes may not lead to pandemics, antigenic drift over a period of time can make a strain considerably different from the original pandemic virus.
+
+It has been confirmed that the long-term evolution of cytotoxic T lymphocyte (CTL) epitopes is associated with CTL-mediated clearance of infection and it is thought that the selection pressures imposed by CTL immunity shape the long-term evolution of IAV [53,54]. Viruses mutate amino acid residues within CTL epitopes to evade CTL recognition [55]. Under certain circumstances, amino acid substitutions occur at the anchoring residues, while in other cases they occur at the T cell receptor contact residues [56]. For instance, mutations at the anchored residues of the CTL epitope have been described in the human leukocyte antigen (HLA)-B* 2705 restricted NP383–391 epitope, which has the R-to-G substitution at position 384 (R384G) [57,58]. This replacement significantly reduced the in vitro virus-specific CTL response in HLA-B* 2705-positive individuals.
+
+4.2. Re-Assortment
+It has been well recognized that the segmented genome of the influenza virus allows the exchange of RNA segments between genotypically different influenza viruses, resulting in the production of new strains and/or subtypes [67], which is referred to as re-assortment. A pandemic IAV can be produced by transmission from animals to humans or by reconfiguration between avian influenza viruses and human influenza viruses [68]. As the influenza virus has a segmented genome, re-assortment is an important mechanism for generation of the "novel" virus [69]. Thus, re-assortment of the virus achieves a new antigenic pattern known as "antigenic shift". Pandemic influenza emerges as a result of such major genetic changes of IAV. These modifications occur due to mechanistic errors during the replication of viral RNA polymerase, evolutionary pressure, the novel environment of the host, immune pressure, or antiviral drug pressure [70]. Two of the three major human influenza pandemics in the twentieth century (1957 and 1968) and this century (2009) were due to the re-assortment between the human IAV and other host species.
+
+
+There is evidence indicating that the HA, NA, and PB1 genes of the H2N2 1957 pandemic strain in addition to the HA and PB1 fragments of the H3N2 1968 pandemic strain are both avian, and the remaining fragments may come directly from 1918 [67]. The first influenza pandemic in this century, the influenza A H1N1 virus, is a re-assortant caused by a multiple mixed recombination between the European H1N1 swine influenza virus, North American H1N2 swine influenza virus, North American avian influenza virus, and H3N2 influenza virus [71].
+
+In addition to mutation and re-assortment, IAVs still have another relatively rare means of evolution called recombination. Genetic recombination is one of the primary processes that produce the genetic diversity upon which natural selection acts. Recombination in IAVs can occur through two main mechanisms: one is the non-homologous recombination that occurs between two different RNA fragments [81,82]; the other is the controversial homologous recombination, often considered to be absent or very rare, which is thought to participate in template switching while the polymerase is copying the RNA.
+
+
+
+Wild waterfowl and shorebirds belong to the main natural host species of IAV [88]. IAV has been able to establish the successful infection of a variety of animals, including avian and mammalian species, and its evolution has led to the emergence of IAV in human beings for a long time [89]. Since the pandemic outbreak of influenza virus in 1918, the re-assortment of influenza virus has occurred among bird and human viruses. As described above, the re-assortment of influenza viruses has resulted in the pandemic of H2N2 in 1957 and of H3N2 in 1968 [90]. During the year 2009, there was an outbreak of H1N1 in humans that caused the first pandemic of influenza through human transmission in the 21st century [91].
+
+Usually, an avian influenza subtype does not infect humans and a human influenza subtype is unable to infect the birds. However, swine acts as a virus mixer vessel, leading to the generation of new influenza viruses, which can infect both humans and poultry. The mutation and re-assortment of the IAV genome are susceptible to forming new subtypes of influenza virus that may result in widely propagated and destructive pandemics due to the lack of immunity to the emerging pathogen [67]. For example, the outbreak of H5N1 avian influenza in 1997 and the outbreak of H1N1 swine influenza in 2009 caused great panic and brought serious economic losses to the breeding industry.
+
+
+
+}
 
 
 \clearpage 
