--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,108 @@
+@article{woolthuis2016long,
+  title={Long-term adaptation of the influenza A virus by escaping cytotoxic T-cell recognition},
+  author={Woolthuis, Rutger G and van Dorp, Christiaan H and Ke{\c{s}}mir, Can and de Boer, Rob J and van Boven, Michiel},
+  journal={Scientific reports},
+  volume={6},
+  number={1},
+  pages={1--8},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{fan2012role,
+  title={Role of Itk signalling in the interaction between influenza A virus and T-cells},
+  author={Fan, Kewei and Jia, Yinping and Wang, Song and Li, Hua and Wu, Defeng and Wang, Guoshun and Chen, Ji-Long},
+  journal={Journal of general virology},
+  volume={93},
+  number={5},
+  pages={987--997},
+  year={2012},
+  publisher={Microbiology Society}
+}
+@article{van2016differential,
+  title={Differential recognition of influenza a viruses by M158--66 epitope-specific CD8+ T cells is determined by extraepitopic amino acid residues},
+  author={van de Sandt, Carolien E and Kreijtz, Joost HCM and Geelhoed-Mieras, Martina M and Nieuwkoop, Nella J and Spronken, Monique I and van de Vijver, David AMC and Fouchier, Ron AM and Osterhaus, Albert DME and Rimmelzwaan, Guus F},
+  journal={Journal of virology},
+  volume={90},
+  number={2},
+  pages={1009--1022},
+  year={2016},
+  publisher={Am Soc Microbiol}
+}
+@article{berkhoff2007assessment,
+  title={Assessment of the extent of variation in influenza A virus cytotoxic T-lymphocyte epitopes by using virus-specific CD8+ T-cell clones},
+  author={Berkhoff, EGM and Geelhoed-Mieras, MM and Fouchier, RAM and Osterhaus, ADME and Rimmelzwaan, GF},
+  journal={Journal of General Virology},
+  volume={88},
+  number={2},
+  pages={530--535},
+  year={2007},
+  publisher={Microbiology Society}
+}
+@article{van2012evasion,
+  title={Evasion of influenza A viruses from innate and adaptive immune responses},
+  author={Van de Sandt, Carolien E and Kreijtz, Joost HCM and Rimmelzwaan, Guus F},
+  journal={Viruses},
+  volume={4},
+  number={9},
+  pages={1438--1476},
+  year={2012},
+  publisher={MDPI}
+}
+
+@article{vergara2014ns,
+  title={The NS segment of H5N1 avian influenza viruses (AIV) enhances the virulence of an H7N1 AIV in chickens},
+  author={Vergara-Alert, J{\'u}lia and Busquets, N{\'u}ria and Ballester, Maria and Chaves, Aida J and Rivas, Raquel and Dolz, Roser and Wang, Zhongfang and Pleschka, Stephan and Maj{\'o}, Nat{\`a}lia and Rodr{\'\i}guez, Fernando and others},
+  journal={Veterinary research},
+  volume={45},
+  number={1},
+  pages={1--11},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{reid2003origin,
+  title={The origin of the 1918 pandemic influenza virus: a continuing enigma},
+  author={Reid, Ann H and Taubenberger, Jeffery K},
+  journal={Journal of general virology},
+  volume={84},
+  number={9},
+  pages={2285--2292},
+  year={2003},
+  publisher={Microbiology Society}
+}
+@article{landolt2007up,
+  title={Up to new tricks--a review of cross-species transmission of influenza A viruses},
+  author={Landolt, Gabriele A and Olsen, Christopher W},
+  journal={Animal Health Research Reviews},
+  volume={8},
+  number={1},
+  pages={1--21},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+@article{mills2004transmissibility,
+  title={Transmissibility of 1918 pandemic influenza},
+  author={Mills, Christina E and Robins, James M and Lipsitch, Marc},
+  journal={Nature},
+  volume={432},
+  number={7019},
+  pages={904--906},
+  year={2004},
+  publisher={Nature Publishing Group}
+}
+
+@article{shao2017evolution,
+  title={Evolution of influenza a virus by mutation and re-assortment},
+  author={Shao, Wenhan and Li, Xinxin and Goraya, Mohsan Ullah and Wang, Song and Chen, Ji-Long},
+  journal={International journal of molecular sciences},
+  volume={18},
+  number={8},
+  pages={1650},
+  year={2017},
+  publisher={MDPI}
+}
+
+
 @article{neher2014predicting,
   title={Predicting evolution from the shape of genealogical trees},
   author={Neher, Richard A and Russell, Colin A and Shraiman, Boris I},
