--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,46 @@
+@article{gouma2020antigenic,
+  title={Antigenic assessment of the H3N2 component of the 2019-2020 Northern Hemisphere influenza vaccine},
+  author={Gouma, Sigrid and Weirick, Madison and Hensley, Scott E},
+  journal={Nature communications},
+  volume={11},
+  number={1},
+  pages={1--5},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+@article{cobey2018poor,
+  title={Poor immunogenicity, not vaccine strain egg adaptation, may explain the low H3N2 influenza vaccine effectiveness in 2012--2013},
+  author={Cobey, Sarah and Gouma, Sigrid and Parkhouse, Kaela and Chambers, Benjamin S and Ertl, Hildegund C and Schmader, Kenneth E and Halpin, Rebecca A and Lin, Xudong and Stockwell, Timothy B and Das, Suman R and others},
+  journal={Clinical Infectious Diseases},
+  volume={67},
+  number={3},
+  pages={327--333},
+  year={2018},
+  publisher={Oxford University Press US}
+}
+
+@article{ahlquist2002rna,
+  title={RNA-dependent RNA polymerases, viruses, and RNA silencing},
+  author={Ahlquist, Paul},
+  journal={Science},
+  volume={296},
+  number={5571},
+  pages={1270--1273},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{chen2006avian,
+  title={Avian influenza virus exhibits rapid evolutionary dynamics},
+  author={Chen, Rubing and Holmes, Edward C},
+  journal={Molecular biology and evolution},
+  volume={23},
+  number={12},
+  pages={2336--2341},
+  year={2006},
+  publisher={Oxford University Press}
+}
+
 @article{woolthuis2016long,
   title={Long-term adaptation of the influenza A virus by escaping cytotoxic T-cell recognition},
   author={Woolthuis, Rutger G and van Dorp, Christiaan H and Ke{\c{s}}mir, Can and de Boer, Rob J and van Boven, Michiel},
